Introduced a common.gradle file to hold common functions/methods/closures/etc for project wide use.
Twiddled with functionalTest knobs a bit to be a bit easier on memory by default.